--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,6 @@
   Bienvenidos a Angular <br>
 
 </p>
-<app-counter></app-counter>
+<!-- <app-counter></app-counter> -->
+<app-heroes-hero></app-heroes-hero>
+<app-heroes-list></app-heroes-list>
