--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,4 @@
 </p>
 <!-- <app-counter></app-counter> -->
 <app-heroes-hero></app-heroes-hero>
-<app-heroes-list></app-heroes-list>
+<!-- <app-heroes-list></app-heroes-list> -->
