--- a/src/app/heroes/hero/hero.component.html
+++ b/src/app/heroes/hero/hero.component.html
@@ -9,10 +9,10 @@
   <dd> {{age}} </dd>
 
   <td>Método:</td>
-  <dd>algún metodo</dd>
+  <dd> {{getHeroDescription()}} </dd>
 
   <td>Capitalizado:</td>
-  <dd>nombre</dd>
+  <dd>{{capitalizedName}}</dd>
 
 </dl>
 
