--- a/src/app/dbz/components/pages/main-page.component.html
+++ b/src/app/dbz/components/pages/main-page.component.html
@@ -1,1 +1,25 @@
 <h1>DBZ Personajes</h1>
+<hr>
+
+<div class="row">
+  <div class="col">
+    <h4>Listado</h4>
+    <ul class="list-group">
+      <li class="list-group-item">Krilin - 500</li>
+      <li class="list-group-item">Goku - 10000</li>
+    </ul>
+  </div>
+
+  <div class="col">
+    <h4>Agregar  Personaje</h4>
+
+    <form action="">
+      <input type="text" placeholder="Nombre" class="form-control mb-2">
+      <input type="text" placeholder="Poder" class="form-control mb-2">
+
+      <button type="submit" class="btn btn-primary">
+        Agregar
+      </button>
+    </form>
+  </div>
+</div>
