--- a/src/app/dbz/components/list/list.component.html
+++ b/src/app/dbz/components/list/list.component.html
@@ -1,9 +1,15 @@
 <h4>Listado</h4>
 <ul class="list-group">
-  <li *ngFor="let character of characterList"
+  <li *ngFor="
+    let character of characterList;
+    let i = index;
+    let isFirt = first;
+    let isLast = last;"
     class="list-group-item">
+    <span class="text-primary"> {{i + 1}} </span>
     <span>{{ character.name }} - </span>
     <strong>Power: </strong>
     <span>{{ character.power }}</span>
+    <span>Es el primero: {{isFirt}} </span>
   </li>
 </ul>
