--- a/src/app/dbz/components/add-character/add-character.component.html
+++ b/src/app/dbz/components/add-character/add-character.component.html
@@ -1,6 +1,6 @@
 <h4>Agregar  Personaje</h4>
 
-<form action="">
+<form (ngSubmit)="emitCharacter()">
   <input
     type="text"
     [(ngModel)]="character.name"
@@ -15,7 +15,7 @@
     placeholder="Poder"
     class="form-control mb-2"
     name="power">
-  <button type="submit" class="btn btn-primary" (click)="emitCharacter()">
+  <button type="submit" class="btn btn-primary">
     Agregar
   </button>
 
