--- a/src/app/dbz/components/list/list.component.html
+++ b/src/app/dbz/components/list/list.component.html
@@ -7,15 +7,25 @@
     let isFirt = first;
     let isLast = last;
     let isEven = even"
-    class="list-group-item"
+    class="list-group-item d-flex justify-content-between align-items-center
+    "
     [ngClass]="{
       'list-group-item-dark':isLast,
       'list-group-item-primary': isEven
     }">
-    <span class="text-primary"> {{i + 1}} </span>
-    <span>{{ character.name }} - </span>
-    <strong>Power: </strong>
-    <span>{{ character.power }}</span>
-    <span>Es el primero: {{isFirt}} </span>
+
+    <div>
+      <span class="text-primary"> {{i + 1}} </span>
+
+      <span>{{ character.name }} - </span>
+
+      <strong>Power: </strong>
+
+      <span>{{ character.power }}</span>
+
+    </div>
+
+
+    <button class="btn btn-danger" (click)="onDeleteCharacter(i)"> X </button>
   </li>
 </ul>
