--- a/src/app/dbz/components/list/list.component.html
+++ b/src/app/dbz/components/list/list.component.html
@@ -26,6 +26,6 @@
     </div>
 
 
-    <button class="btn btn-danger" (click)="onDeleteCharacter(i)"> X </button>
+    <button class="btn btn-danger" (click)="onDeleteCharacter(character.id)"> X </button>
   </li>
 </ul>
